--- a/myTicTacToe/src/main/webapp/templates/game-board.html
+++ b/myTicTacToe/src/main/webapp/templates/game-board.html
@@ -27,7 +27,8 @@
 				<tbody>
 					<tr ng-repeat="move in movesInGame">
 						<td>{{move.userName}}</td>
-						<td>Board row: {{move.boardRow}}, Board column:{{move.boardColumn}}</td>
+						<td>Board row: {{move.boardRow}}, Board
+							column:{{move.boardColumn}}</td>
 						<td>{{move.created | date:'MM-dd-yyyy HH:mm:ss'}}</td>
 					</tr>
 				</tbody>
