--- a/myTicTacToe/src/main/webapp/templates/player-panel.html
+++ b/myTicTacToe/src/main/webapp/templates/player-panel.html
@@ -5,55 +5,80 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h2 class="lead">New game</h2>
-			<form name="createNewBoard" class="form-horizontal" novalidate 	ng-submit="createNewGame()">
+			<form name="createNewBoard" class="form-horizontal" novalidate
+				ng-submit="createNewGame()">
 				<div class="form-group">
-					<label for="gameType" class="col-md-2 control-label">Game type:</label>
+					<label for="gameType" class="col-md-2 control-label">Game
+						type:</label>
 					<div class="col-md-8">
-						<select required class="form-control" name="gameType" id="gameType" ng-model="newGameData.gameType">
+						<select required class="form-control" name="gameType"
+							id="gameType" ng-model="newGameData.gameType">
 							<option ng-repeat="option in newGameOptions.availableGameTypes"
 								value="{{option.name}}">{{option.name}}</option>
-						</select></div>	</div>
+						</select>
+					</div>
+				</div>
 				<div class="form-group">
 					<label for="piece" class="col-md-2 control-label">Play as:</label>
 					<div class="col-md-8">
-						<select required class="form-control" name="piece" id="piece" ng-model="newGameData.piece">
-							<option ng-repeat="option in newGameOptions.availablePieces" 
+						<select required class="form-control" name="piece" id="piece"
+							ng-model="newGameData.piece">
+							<option ng-repeat="option in newGameOptions.availablePieces"
 								value="{{option.name}}">{{option.name}}</option>
-						</select></div>	</div>
+						</select>
+					</div>
+				</div>
 				<div class="form-group">
-					<label for="gameName" class="col-md-2 control-label">Name of the game:</label>
+					<label for="gameName" class="col-md-2 control-label">Name
+						of the game:</label>
 					<div class="col-md-8">
-						<input name="gameName" id="gameName" class="form-control" ng-model="newGameData.gameName"
+						<input name="gameName" id="gameName" class="form-control"
+							ng-model="newGameData.gameName"
 							placeholder="write the name of new game">
-					</div>	</div>
+					</div>
+				</div>
 				<div class="form-group">
 					<label for="tag" class="col-md-2 control-label">Tags:</label>
 					<div class="col-md-8">
 						<input type="text" name="tags" id="tag" class="form-control"
-							ng-model="newGameData.tags" placeholder="write some tags" default="Minsk" value="Minsk, Brest, Poli">
-					</div></div>
+							ng-model="newGameData.tags" placeholder="write some tags"
+							default="Minsk" value="Minsk, Brest, Poli">
+					</div>
+				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-4 col-sm-6" style="padding-bottom: 50px">
-						<button type="submit" class="btn btn-md btn-primary" ng-disabled="createNewGame.$invalid">
+						<button type="submit" class="btn btn-md btn-primary"
+							ng-disabled="createNewGame.$invalid">
 							<span class="glyphicon glyphicon-plus"></span> New Game
-						</button></div></div>
+						</button>
+					</div>
+				</div>
 			</form>
 		</div>
 		<div class="col-md-6" ng-controller="gamesToJoinController">
 
 			<h2 class="lead">Join existing game</h2>
-			<form name="filterGames" class="form-horizontal" novalidate ng-submit="filterNewGame()">
-			<div class="row">
-			<div class="col-md-8">
-			<div class="form-group">
-					<div class="col-md-12">
-						<input name="taga" id="taga" placeholder="write some tags" value="Minsk">
-					</div></div></div>
+			<form name="filterGames" class="form-horizontal" novalidate
+				ng-submit="filterNewGame()">
+				<div class="row">
+					<div class="col-md-8">
+						<div class="form-group">
+							<div class="col-md-12">
+								<input name="taga" id="taga" placeholder="write some tags"
+									value="Minsk">
+							</div>
+						</div>
+					</div>
 					<div class="col-md-4">
-			<div class="form-group">
-					<div class="col-sm-offset-4 col-sm-6" style="padding-bottom: 50px">
-						<button type="submit" class="btn btn-md btn-primary">Filter by Tags
-						</button></div></div></div></div>
+						<div class="form-group">
+							<div class="col-sm-offset-4 col-sm-6"
+								style="padding-bottom: 50px">
+								<button type="submit" class="btn btn-md btn-primary">Filter
+									by Tags</button>
+							</div>
+						</div>
+					</div>
+				</div>
 			</form>
 			<div class="card-deck" ng-show="gamesToJoin.length">
 
@@ -62,8 +87,9 @@
 					<div ng-repeat="game in gamesToJoin">
 						<div class="col-md-4">
 							<div class="card text-white bg-info mb-3">
-								<h5 class="card-header" align="center">Game name: {{game.gameName}}</h5>
-								<p class="card-text">Game tags: {{game.tags}}</p>
+								<h5 class="card-header" align="center">Game name:
+									{{game.gameName}}</h5>
+								<p class="card-text">Game created: {{game.created}}</p>
 								<button type="submit" class="btn btn-sm"
 									ng-click="joinGame(game.id)">
 									<span class="glyphicon glyphicon-plus"></span> Join
